--- a/trunk/Event Logger/EventLogger.prefs
+++ b/trunk/Event Logger/EventLogger.prefs
@@ -1,5 +1,5 @@
 #Event Logger Properties
-#Thu Jun 23 12:58:04 CEST 2005
+#Wed Nov 30 16:24:15 CET 2005
 HostName=localhost
 BufferSize=500
 HostPort=4535
