--- a/trunk/Event Logger/EventLogger.prefs
+++ b/trunk/Event Logger/EventLogger.prefs
@@ -1,5 +1,5 @@
 #Event Logger Properties
-#Tue Mar 21 01:19:17 CET 2006
+#Thu Mar 30 17:26:32 CEST 2006
 HostName=localhost
 BufferSize=500
 HostPort=4535
