--- a/trunk/Hardware Proxies/iStuff Mobile/Symbian/iStuffMobile/group/ISTUFFMOBILE.VCPROJ
+++ b/trunk/Hardware Proxies/iStuff Mobile/Symbian/iStuffMobile/group/ISTUFFMOBILE.VCPROJ
@@ -43,7 +43,7 @@
 			Name="VCCustomBuildTool"/>
 		<Tool
 			Name="VCLinkerTool"
-			AdditionalDependencies= "&quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\EDLL.LIB&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\euser.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apparc.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\cone.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcore.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apgrfx.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\esock.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\btextnotifiers.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcoctl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\avkon.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\ws32.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bluetooth.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\flogger.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\mediaclientaudio.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\efsrv.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\vibractrl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bafl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\BUILD\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\GROUP\ISTUFFMOBILE\WINS\UDEB\ISTUFFMOBILE.exp&quot;"
+			AdditionalDependencies= "&quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\EDLL.LIB&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\euser.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apparc.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\cone.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcore.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apgrfx.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\esock.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\btextnotifiers.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcoctl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\avkon.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\ws32.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\flogger.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\mediaclientaudio.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\efsrv.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\vibractrl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bafl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bluetooth.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\BUILD\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\GROUP\ISTUFFMOBILE\WINS\UDEB\ISTUFFMOBILE.exp&quot;"
 			OutputFile="\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\Z\SYSTEM\APPS\ISTUFFMOBILE\ISTUFFMOBILE.APP"
 			LinkIncremental="1"
 			SuppressStartupBanner="TRUE"
@@ -147,7 +147,7 @@
 			Name="VCCustomBuildTool"/>
 		<Tool
 			Name="VCLinkerTool"
-			AdditionalDependencies= "&quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UREL\EDLL.LIB&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\euser.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apparc.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\cone.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcore.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apgrfx.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\esock.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\btextnotifiers.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcoctl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\avkon.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\ws32.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bluetooth.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\flogger.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\mediaclientaudio.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\efsrv.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\vibractrl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bafl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\BUILD\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\GROUP\ISTUFFMOBILE\WINS\UREL\ISTUFFMOBILE.exp&quot;"
+			AdditionalDependencies= "&quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UREL\EDLL.LIB&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\euser.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apparc.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\cone.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcore.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\apgrfx.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\esock.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\btextnotifiers.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\eikcoctl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\avkon.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\ws32.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\flogger.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\mediaclientaudio.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\efsrv.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\vibractrl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bafl.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UDEB\bluetooth.lib&quot; &quot;\dev\Symbian\7.0s\Series60_v21\EPOC32\BUILD\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\GROUP\ISTUFFMOBILE\WINS\UREL\ISTUFFMOBILE.exp&quot;"
 			OutputFile="\dev\Symbian\7.0s\Series60_v21\EPOC32\RELEASE\WINS\UREL\Z\SYSTEM\APPS\ISTUFFMOBILE\ISTUFFMOBILE.APP"
 			LinkIncremental="1"
 			SuppressStartupBanner="TRUE"
@@ -242,6 +242,26 @@
 		</File>
 		<File
 			RelativePath="\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\GROUP\Istuffmobile.uid.cpp">
+			<FileConfiguration
+				Name="Release WINS|Win32">
+				<Tool
+					Name="VCCLCompilerTool"
+					Optimization="1"
+					AdditionalIncludeDirectories=""
+					PreprocessorDefinitions=" __SYMBIAN32__; __VC32__; __WINS__; __DLL__;NDEBUG;_UNICODE;$(NoInherit)"/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Debug WINS|Win32">
+				<Tool
+					Name="VCCLCompilerTool"
+					Optimization="0"
+					AdditionalIncludeDirectories=""
+					PreprocessorDefinitions=" __SYMBIAN32__; __VC32__; __WINS__; __DLL__;_DEBUG;_UNICODE;$(NoInherit)"
+					BrowseInformation="1"/>
+			</FileConfiguration>
+		</File>
+		<File
+			RelativePath="\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\SRC\Btdiscoverer.cpp">
 			<FileConfiguration
 				Name="Release WINS|Win32">
 				<Tool
@@ -449,6 +469,9 @@
 		</File>
 		<File
 			RelativePath="\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\INC\Istuffmobileappui.h">
+		</File>
+		<File
+			RelativePath="\DEV\SYMBIAN\PROJECTS\ISTUFFMOBILE\INC\Btdiscoverer.h">
 		</File>
 	</Filter>
 	</Files>
