Working package of AppleScript interface. However, I can only successfully built it on Tiger with gcc 3.3

--- a/trunk/Event Heap/appleScript/eventheap/Info.plist
+++ b/trunk/Event Heap/appleScript/eventheap/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>0.1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+	<string>MyApplication</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 </dict>
