Major release:  + encapsulation of c++ cosntructs in Objective-C objects  + Added a first version of an installer  + Reenabled all GUI elements  + Before a new connection is made, the host is checked    wheter it runs an Event Heap and if the hostname / -address is resolvable

--- a/trunk/Event Logger/EventLogger.prefs
+++ b/trunk/Event Logger/EventLogger.prefs
@@ -1,5 +1,5 @@
 #Event Logger Properties
-#Sat Apr 15 00:48:32 CEST 2006
-HostName=localhost
+#Mon Jul 03 20:55:04 CEST 2006
+HostName=montgomery
 BufferSize=500
 HostPort=4535
